[r=blake-rouse][bug=1470395][author=ricgard] Amends spacing between node name save buttons and placement.

--- a/src/maasserver/static/scss/maas/layout/_headers.scss
+++ b/src/maasserver/static/scss/maas/layout/_headers.scss
@@ -330,7 +330,10 @@ header.banner {
         .link-cta-ubuntu,
         .alt {
             font-size: 16px;
-            margin-right: 20px;
+            margin-left: 20px;
+            position: relative;
+            vertical-align: middle;
+            margin-top: -5px;
         }
     }
 
